codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__compact_hooks_keep_the_last_event_and_selection_visible.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: text
---

  Hooks
  Lifecycle hooks from config and
  enabled plugins.

  Event               Active/Installed
↑
  SessionEnd          0/0
  UserPromptSubmit    0/0
  SubagentStart       0/0
  SubagentStop        0/0
  Stop                0/0
› Interrupt           0/0


  enter details · esc close
