codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_agent_hook_definition.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PostToolUse hooks                                                                                             
  Turn hooks on or off. Your changes are saved automatically.                                                   
                                                                                                                
  [x] Hook 1                                                                                                    
                                                                                                                
  Event     PostToolUse                                                                                         
  Matcher   Bash                                                                                                
  Source    User config - /tmp/hooks.json                                                                       
  Agent     Run the relevant tests: $ARGUMENTS                                                                  
  Model     gpt-5.1                                                                                             
  On block  stop                                                                                                
  Timeout   60s                                                                                                 
  Trust     Trusted                                                                                             
                                                                                                                
  Press space or enter to toggle; esc to go back
